--- a/demos/testing.html
+++ b/demos/testing.html
@@ -29,7 +29,7 @@ var tankSprite = new Elemental.Sprite({
 var canvas = new Elemental.Canvas("canvas", fullscreen=true);
 
 // Define a tiled viewport, with a function to draw tiles at given points
-var viewport = new Elemental.Viewport.Tiled(canvas, LEVEL_TEST);
+var viewport = new Elemental.Viewport.Tiled(canvas, LEVEL_HI);
 
 // Define variables for tank position, camera speed, and tank speed
 var tankPos = Elemental.Vector.Empty;
