--- a/tankphysics.html
+++ b/tankphysics.html
@@ -5,12 +5,11 @@
 
 <script>
 
+// Define our canvas and viewport
 var canvas = new Elemental.Canvas("game", fullscreen=true);
 var viewport = new Elemental.Viewport(canvas);
 
-var moveSpeed = 0.5;
-var maxSpeed = 5;
-
+// Define a tank sprite, made of an arc and rectangular barrel
 var tankSprite = new Elemental.Sprite({
 	body: new Elemental.Shape.Arc(50, data={
 		lineWidth: 10,
@@ -32,6 +31,7 @@ var tankSprite = new Elemental.Sprite({
 	})
 });
 
+// Define simple bullet sprite, with a single circular body
 var bulletSprite = new Elemental.Sprite({
 	bullet: new Elemental.Shape.Arc(10, data={
 		lineWidth: 10,
@@ -39,31 +39,48 @@ var bulletSprite = new Elemental.Sprite({
 	})
 })
 
+// Define a bullet class, to represent a shot bullet
 class Bullet {
 	constructor(posn, velocity) {
 		this.posn = posn;
 		this.velocity = velocity;
 	}
 
+	// Called every frame
 	frame() {
+		// Add velocity to current position
 		this.posn = Elemental.Vector.Add(this.posn, this.velocity);
 	}
 }
 
-var bullets = [];
-var bulletSpeed = 15;
+// Define some constants
+const moveSpeed = 0.5;
+const maxSpeed = 5;
+const bulletSpeed = 15;
 
+// Define empty array to store bullets
+var bullets = [];
+
+// Define a rigidbody for our tank's position and movement
 var tankRigid = new Elemental.Physics.Rigidbody();
+
+// Set the friction multiplier to 0.95
 tankRigid.friction = 0.95;
 
+// Call this function 60 times a second
 canvas.start(function(){
+	// Calculate angle to mouse from tank
 	mouseAngle = Elemental.Helpers.AngleBetween(canvas.mousePos, viewport.translatePoint(tankRigid.posn));
+
+	// Set the tank sprite's rotation to the computed angle
 	tankSprite.rotation = mouseAngle;
 
+	// Call the 'frame()' function for every bullet
 	bullets.forEach(function(bullet){
 		bullet.frame();
 	});
 
+	// If left mouse button has been clicked
 	if (canvas.mouseDown(Elemental.Mousecodes.LEFT)) {
 		// Calculate step to move to target position
 		var step = Elemental.Helpers.StepBetween(canvas.mousePos, viewport.translatePoint(tankRigid.posn));
@@ -87,23 +104,32 @@ canvas.start(function(){
 		tankRigid.addForce(Elemental.Vector.Multiply(step, -0.05));
 	}
 
+	// Get keyboard input and store it in a vector
 	var movement = Elemental.Vector.Empty;
 	if (canvas.keyHeld(Elemental.Keycodes.W)) movement.y -= moveSpeed;
 	if (canvas.keyHeld(Elemental.Keycodes.S)) movement.y += moveSpeed;
 	if (canvas.keyHeld(Elemental.Keycodes.A)) movement.x -= moveSpeed;
 	if (canvas.keyHeld(Elemental.Keycodes.D)) movement.x += moveSpeed;
 
+	// Check if tank velocity is within allowed range, if not, slow it down
 	if (tankRigid.xvelocity > maxSpeed) tankRigid.xvelocity = maxSpeed;
 	if (tankRigid.xvelocity < -maxSpeed) tankRigid.xvelocity = -maxSpeed;
 	if (tankRigid.yvelocity > maxSpeed) tankRigid.yvelocity = maxSpeed;
 	if (tankRigid.yvelocity < -maxSpeed) tankRigid.yvelocity = -maxSpeed;
 
+	// Add keyboard input movement to tank rigidbody
 	tankRigid.addForce(movement);
+
+	// Do rigidbody calculations
 	tankRigid.logic();
 
+	// Fill the canvas with a grey background
 	viewport.drawFill("#e4e4e4");
+
+	// Draw tank sprite at the position of the tank rigidbody
 	viewport.drawSprite(tankSprite, tankRigid.posn);
 
+	// Draw every bullet onto the canvas
 	bullets.forEach(function(bullet){
 		viewport.drawSprite(bulletSprite, bullet.posn);
 	});
