--- a/tankphysics.html
+++ b/tankphysics.html
@@ -53,10 +53,10 @@ class Bullet {
 	}
 }
 
-// Define some constants
-const moveSpeed = 0.5;
-const maxSpeed = 5;
-const bulletSpeed = 15;
+// Define some variables to store game constants
+var moveSpeed = 0.5;
+var maxSpeed = 5;
+var bulletSpeed = 15;
 
 // Define empty array to store bullets
 var bullets = [];
