changed how friction works

--- a/demo_tankcubes.html
+++ b/demo_tankcubes.html
@@ -61,7 +61,7 @@ class Collectable {
 		this.angle = 0;
 		this.rigidbody = new Elemental.Physics.Rigidbody()
 		this.rigidbody.posn = posn;
-		this.rigidbody.friction = 1;
+		this.rigidbody.friction = 0.05;
 
 		var force = new Elemental.Vector(
 			Elemental.Helpers.RandomInt(-2, 2)*0.1,
@@ -129,8 +129,8 @@ function addCollectable(point) {
 // Define a rigidbody for our tank's position and movement
 var tankRigid = new Elemental.Physics.Rigidbody();
 
-// Set the friction multiplier to 0.95
-tankRigid.friction = 0.95;
+// Set the friction multiplier to 0.1
+tankRigid.friction = 0.1;
 
 addCollectable(new Elemental.Vector(
 	Elemental.Helpers.RandomInt(-500, 500),
@@ -218,10 +218,10 @@ canvas.start(function(){
 	if (canvas.keyHeld(Elemental.Keycodes.D)) movement.x += moveSpeed;
 
 	// Check if tank velocity is within allowed range, if not, slow it down
-	if (tankRigid.xvelocity > maxSpeed) tankRigid.xvelocity = maxSpeed;
-	if (tankRigid.xvelocity < -maxSpeed) tankRigid.xvelocity = -maxSpeed;
-	if (tankRigid.yvelocity > maxSpeed) tankRigid.yvelocity = maxSpeed;
-	if (tankRigid.yvelocity < -maxSpeed) tankRigid.yvelocity = -maxSpeed;
+	if (tankRigid.velocity.x > maxSpeed) tankRigid.velocity.x = maxSpeed;
+	if (tankRigid.velocity.x < -maxSpeed) tankRigid.velocity.x = -maxSpeed;
+	if (tankRigid.velocity.y > maxSpeed) tankRigid.velocity.y = maxSpeed;
+	if (tankRigid.velocity.y < -maxSpeed) tankRigid.velocity.y = -maxSpeed;
 
 	// Add keyboard input movement to tank rigidbody
 	tankRigid.addForce(movement);
