--- a/demo_collision.html
+++ b/demo_collision.html
@@ -6,6 +6,8 @@
 
 <script>
 
+var my_var = 100;
+
 var canvas = new Elemental.Canvas("canvas", fullscreen=true);
 var viewport = new Elemental.Viewport(canvas);
 
